<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="12dp"
                android:textSize="16sp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_time">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etStartTime"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="12dp"
                android:textSize="16sp"
                android:focusable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/end_time">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEndTime"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="12dp"
                android:textSize="16sp"
                android:focusable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="12dp"
                android:textSize="16sp"
                android:focusable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNote"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:padding="12dp"
                android:textSize="16sp"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/lightGray"
            app:cardCornerRadius="8dp">

            <RadioGroup
                android:id="@+id/rgRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <RadioButton
                    android:id="@+id/radioNever"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/never_repeat" />

                <RadioButton
                    android:id="@+id/radioDaily"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_repeat" />

                <RadioButton
                    android:id="@+id/radioWeekly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weekly_repeat" />
            </RadioGroup>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytRecEnd"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_until"
            android:visibility="gone">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRecurrenceEnd"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="12dp"
                android:focusable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/swPermanent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/do_not_auto_expire" />

        <Button
            android:id="@+id/btnSaveTask"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/save" />

    </LinearLayout>
</ScrollView>
